test/testdata/functions/missing_two_args_error.lox
fun add(x, y) {
  print x + y;
}

add(); // error: add() missing 2 arguments: x and y
